@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2020 The Thingsboard Authors
+ * Copyright © 2016-2021 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 
-import java.nio.charset.Charset;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -30,7 +30,7 @@ import java.sql.SQLException;
 @Slf4j
 public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchemaService {
 
-    private static final String SQL_DIR = "sql";
+    protected static final String SQL_DIR = "sql";
 
     @Value("${spring.datasource.url}")
     protected String dbUrl;
@@ -42,7 +42,7 @@ public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchema
     protected String dbPassword;
 
     @Autowired
-    private InstallScripts installScripts;
+    protected InstallScripts installScripts;
 
     private final String schemaSql;
     private final String schemaIdxSql;
@@ -59,14 +59,8 @@ public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchema
 
     @Override
     public void createDatabaseSchema(boolean createIndexes) throws Exception {
-
         log.info("Installing SQL DataBase schema part: " + schemaSql);
-
-        Path schemaFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaSql);
-        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-            String sql = new String(Files.readAllBytes(schemaFile), Charset.forName("UTF-8"));
-            conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
-        }
+        executeQueryFromFile(schemaSql);
 
         if (createIndexes) {
             this.createDatabaseIndexes();
@@ -77,11 +71,15 @@ public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchema
     public void createDatabaseIndexes() throws Exception {
         if (schemaIdxSql != null) {
             log.info("Installing SQL DataBase schema indexes part: " + schemaIdxSql);
-            Path schemaIdxFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaIdxSql);
-            try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                String sql = new String(Files.readAllBytes(schemaIdxFile), Charset.forName("UTF-8"));
-                conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
-            }
+            executeQueryFromFile(schemaIdxSql);
+        }
+    }
+
+    void executeQueryFromFile(String schemaIdxSql) throws SQLException, IOException {
+        Path schemaIdxFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaIdxSql);
+        String sql = Files.readString(schemaIdxFile);
+        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+            conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
         }
     }
 
@@ -91,7 +89,8 @@ public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchema
             log.info("Successfully executed query: {}", query);
             Thread.sleep(5000);
         } catch (InterruptedException | SQLException e) {
-            log.info("Failed to execute query: {} due to: {}", query, e.getMessage());
+            log.error("Failed to execute query: {} due to: {}", query, e.getMessage());
+            throw new RuntimeException("Failed to execute query: " + query, e);
         }
     }
 
